Ibrahim DEV/src/objects/Connexion_collaborateur__c.object
<CustomObject>
    <fields>
        <fullName>Collaborateur__c</fullName>
        <label>Collaborateur</label>
        <referenceTo>Collaborateur__c</referenceTo>
        <relationshipLabel>Connexion collaborateur</relationshipLabel>
        <relationshipName>Connexion_collaborateur</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>connect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>connect</label>
        <type>Checkbox</type>
    </fields>
    <label>Connexion collaborateur</label>
    <nameField>
        <label>Connexion collaborateur Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connexion collaborateur</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>